# license-classification

./: .gitignore  Cargo.toml  README.md  data
scripts/: parse_osadl_matrix.ts
src/: lib.rs  main.rs
tests/: classifier_test.rs  compliancy_test.rs  custom_compliancy_test.rs  lib_test.rs
