[package]
name = "whichlicense_classification"
version = "1.0.0"
edition = "2021"
description = "A tool to classify licenses used by the WhichLicense project"
homepage = "https://whichlicense.com"
repository = "https://github.com/whichlicense/license-classification"
readme = "README.md"
authors = ["Duart Snel <duartsnel@icloud.com>"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
hmap = "0.1.0"